# 415-code

./: .gitignore  LICENSE.txt  Makefile
T2-ListenersVisitors/Calculator/: CMakeLists.txt  README.md
T2-ListenersVisitors/Calculator/grammar/: LabeledExpr.g4
T2-ListenersVisitors/Calculator/include/: EvalVisitor.h
T2-ListenersVisitors/Calculator/src/: CMakeLists.txt  EvalVisitor.cpp  main.cpp
T2-ListenersVisitors/LExpr/: CMakeLists.txt  README.md
T2-ListenersVisitors/LExpr/cmake/: get_antlr.cmake
T2-ListenersVisitors/LExpr/grammar/: LExpr.g4
T2-ListenersVisitors/LExpr/include/: EvalVisitor.h  Evaluator.h  EvaluatorWithProps.h
T2-ListenersVisitors/LExpr/src/: CMakeLists.txt  EvalVisitor.cpp  Evaluator.cpp  EvaluatorWithProps.cpp  main.cpp
T2-ListenersVisitors/PropertyFile/: CMakeLists.txt  README.md
T2-ListenersVisitors/PropertyFile/cmake/: antlr_generate.cmake  get_antlr.cmake  get_antlr_manual.cmake
T2-ListenersVisitors/PropertyFile/grammar/: PropertyFile.g4
T2-ListenersVisitors/PropertyFile/include/: placeholder.h
T2-ListenersVisitors/PropertyFile/listener/: README.md
T2-ListenersVisitors/PropertyFile/listener/grammar/: PropertyFile.g4
T2-ListenersVisitors/PropertyFile/listener/src/: main.cpp
T2-ListenersVisitors/PropertyFile/src/: CMakeLists.txt  main.cpp
T2-ListenersVisitors/PropertyFile/visitor/: CMakeLists.txt
T2-ListenersVisitors/PropertyFile/visitor/src/: main.cpp
T2-ListenersVisitors/Translator/: CMakeLists.txt  README.md
T2-ListenersVisitors/Translator/grammar/: Java.g4
T2-ListenersVisitors/Translator/include/: ExtractInterfaceListener.h
T2-ListenersVisitors/Translator/src/: CMakeLists.txt  ExtractInterfaceListener.cpp  main.cpp
T3-ActionsPredicatesModes/Col/: CMakeLists.txt  README.md
T3-ActionsPredicatesModes/Col/grammar/: Rows.g4
T3-ActionsPredicatesModes/Col/src/: CMakeLists.txt  main.cpp
T3-ActionsPredicatesModes/Data/: CMakeLists.txt  README.md
T3-ActionsPredicatesModes/Data/cmake/: get_antlr_manual.cmake
T3-ActionsPredicatesModes/Data/grammar/: Data.g4
T3-ActionsPredicatesModes/Data/src/: CMakeLists.txt  main.cpp
T4-Symbols/aggregate/: CMakeLists.txt  README.md
T4-Symbols/aggregate/cmake/: get_antlr.cmake
T4-Symbols/aggregate/grammar/: Cymbol.g4
T4-Symbols/aggregate/include/: AST.h  ASTBuilder.h  BaseScope.h  BuiltInTypeSymbol.h  DefRef.h  LocalScope.h  MethodSymbol.h  Scope.h  ScopedSymbol.h  StructSymbol.h  StructTypeSymbol.h  Symbol.h  SymbolTable.h  Type.h  VariableSymbol.h
T4-Symbols/aggregate/src/: AST.cpp  ASTBuilder.cpp  BaseScope.cpp  CMakeLists.txt  DefRef.cpp  MethodSymbol.cpp  ScopedSymbol.cpp  StructSymbol.cpp  SymbolTable.cpp  main.cpp
T4-Symbols/aggregate/tests/: AB.cymbol  t3.cymbol
T4-Symbols/classsym/: CMakeLists.txt  README.md
T4-Symbols/classsym/cmake/: antlr_generate.cmake
T4-Symbols/classsym/grammar/: Cymbol.g4
T4-Symbols/classsym/include/: AST.h  ASTBuilder.h  ASTWalker.h  BaseScope.h  BuiltInTypeSymbol.h  MethodSymbol.h  Scope.h  ScopedSymbol.h  Symbol.h  SymbolTable.h  Type.h  VerboseErrorListener.h
T4-Symbols/classsym/src/: AST.cpp  ASTBuilder.cpp  ASTWalker.cpp  BaseScope.cpp  CMakeLists.txt  ClassSymbol.cpp  DefineSymbols.cpp  MethodSymbol.cpp  ResolveSymbols.cpp  Scope.cpp  ScopedSymbol.cpp  StructSymbol.cpp  Symbol.cpp  SymbolTable.cpp  VerboseErrorListener.cpp  main.cpp
T4-Symbols/classsym/tests/: AB.cymbol  e1.cymbol  e2.cymbol  e3.cymbol  e4.cymbol  nested.cymbol
T4-Symbols/monolithic/: CMakeLists.txt  README.md
T4-Symbols/monolithic/grammar/: Cymbol.g4
T4-Symbols/monolithic/include/: BuiltInTypeSymbol.h  DefRef.h  MyVisitor.h  Scope.h  Symbol.h  SymbolTable.h  Type.h  VariableSymbol.h
T4-Symbols/monolithic/src/: BuiltInTypeSymbol.cpp  CMakeLists.txt  DefRef.cpp  MyVisitor.cpp  SymbolTable.cpp  VariableSymbol.cpp  main.cpp
T4-Symbols/nested/: CMakeLists.txt  README.md
T4-Symbols/nested/cmake/: get_antlr_manual.cmake
T4-Symbols/nested/grammar/: Cymbol.g4
T4-Symbols/nested/include/: AST.h  ASTBuilder.h  BaseScope.h  DefRef.h  GlobalScope.h  LocalScope.h  MethodSymbol.h  Scope.h  Symbol.h  SymbolTable.h  Type.h  VariableSymbol.h
T4-Symbols/nested/src/: AST.cpp  ASTBuilder.cpp  BaseScope.cpp  BuiltInTypeSymbol.cpp  CMakeLists.txt  DefRef.cpp  GlobalScope.cpp  LocalScope.cpp  MethodSymbol.cpp  Scope.cpp  Symbol.cpp  SymbolTable.cpp  Type.cpp  VariableSymbol.cpp  main.cpp
